--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DFL UI</title>
+    <title>DFL Mixnet Dashboard</title>
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
+    <meta name="theme-color" content="#3182CE" />
+    <meta name="description" content="Monitor and control your decentralized federated learning mixnet in real time." />
+    <meta property="og:title" content="DFL Mixnet Dashboard" />
+    <meta property="og:description" content="Real-time monitoring and control of a decentralized mixnet." />
+    <meta property="og:image" content="%PUBLIC_URL%/social-preview.png" />
+    <meta property="og:type" content="website" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Inter', sans-serif;
+        background-color: #f9fafb;
+        color: #1a202c;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
