--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,15 +11,11 @@
     <meta property="og:image" content="%PUBLIC_URL%/social-preview.png" />
     <meta property="og:type" content="website" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Inter', sans-serif;
-        background-color: #f9fafb;
-        color: #1a202c;
-      }
-    </style>
+<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+<style>
+  html { font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
+</style>
+
   </head>
   <body>
     <div id="root"></div>
