--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DFL Mixnet Dashboard</title>
+    <title>Peer-Based Mixing</title>
     <meta name="theme-color" content="#3182CE" />
     <meta name="description" content="Monitor and control your decentralized federated learning mixnet in real time." />
     <meta property="og:title" content="DFL Mixnet Dashboard" />
