--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Peer-Based Mixing</title>
+    <title>Peer-Based Mixing for DFL</title>
     <meta name="theme-color" content="#3182CE" />
     <meta name="description" content="Monitor and control your decentralized federated learning mixnet in real time." />
     <meta property="og:title" content="DFL Mixnet Dashboard" />
     <meta property="og:description" content="Real-time monitoring and control of a decentralized mixnet." />
     <meta property="og:image" content="%PUBLIC_URL%/social-preview.png" />
     <meta property="og:type" content="website" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <style>
